--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,14 @@
 
 .grid div {
     width: 20px;
-    height: 20px;
+    height: 20px; 
+}
 
+.invader{
+    background-color: purple;
+    border-radius: 10px;
+}
+
+.shooter{
+    background-color: red;
 }
